fixed contact psacing on tablet

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -575,19 +575,21 @@ h1, h2, h3, h4, h5, h6 {
         -webkit-box-pack: justify;
             -ms-flex-pack: justify;
                 justify-content: space-between;
-        width: 100%;
+        width: 400px;
         margin: auto;
     }
 
     .contact-group h2 {
         margin: 0;
         text-align: left;
+        width: 250px;
     }
 
     .contact-group p {
         margin: 0;
         width: 500px;
         text-align: left;
+        width: 250px;
     }
 }
 
